--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <input type="text" id="search" placeholder="Search images..." />
-<button id="searchBtn">Search</button>
+  <div id="wrapper">
+    <input type="text" id="search" placeholder="Search images..." />
+    <button id="searchBtn">Search</button>
+  </div>
 <div id="results"></div>
+<button id="loadmoreBtn">load more</button>
 <script src="/scripts.js"></script>
 </body>
 </html>
